Compiler/tests/bad/Variables/05_variable.rs
fn main(){
    let x : i32 = vec![4,6,7];
}
